wire JavaFX to runGui task with platform specific modules //